--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.2.0",
+    "maplibre-gl": "^4.1.1",
+    "pmtiles": "^3.0.5",
+    "protomaps-leaflet": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.58",
