--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^6.1.1",
     "@mui/material": "^5.15.15",
     "leaflet": "^1.9.4",
     "mui": "^0.0.1",
