--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.7",
     "axios": "^1.7.7",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +33,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.2.8"
+    "vite": "^5.4.10"
   }
 }
