--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^6.1.6",
     "@mui/material": "^5.16.7",
     "axios": "^1.7.7",
     "leaflet": "^1.9.4",
